# tula

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.rst
examples/: CMakeLists.txt
examples/cli_builder/: CMakeLists.txt  main.cpp
examples/ecsv_reader/: CMakeLists.txt  main.cpp
examples/mpi/: CMakeLists.txt  main.cpp
include/tula/: bits.h  cli.h  concepts.h  container.h  container_meta.h  ecsv.h  eigen.h  enum.h  filename.h  filesystem.h  grppi.h  grppiex.h  logging.h  meta.h  nc.h  preprocessor.h  switch_invoke.h  traits.h
include/tula/config/: core.h  flatconfig.h  yamlconfig.h
include/tula/ecsv/: core.h  hdr.h  table.h
include/tula/formatter/: atomic.h  byte.h  container.h  duration.h  enum.h  matrix.h  ptr.h  utils.h
include/tula/nddata/: cacheddata.h  core.h  eigen.h  labelmapper.h  wcs.h
tests/: .clang-tidy  CMakeLists.txt  common.h  ecsv.cpp  eigen.cpp  grppi.cpp  grppiex.cpp  main.cpp  nddata.cpp  test_common.h  test_container.cpp  test_ecsv.cpp  test_eigen.cpp  test_filename.cpp  test_flatconfig.cpp  test_formatter.cpp  test_grppi.cpp  test_main.cpp  test_nc.cpp  test_nddata.cpp  test_yamlconfig.cpp
tests/formatter/: test_byte.cpp  test_container.cpp  test_duration.cpp  test_enum.cpp  test_matrix.cpp  test_ostream.cpp  test_ptr.cpp
